--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
+
             line-height: 1.6;
             color: #1d1d1f;
             background: #fff;
